# New-Pre-Cursor

./: .gitignore  AGENT_PLAYBOOK.md  AGENT_PROTOCOL.md  COMMANDS.md  GITHUB_REPOS_COMPREHENSIVE_ANALYSIS.md  PreCursor.winget-manifest.yaml  README.md  REPORT.md  STEPLOG.md  STEP_TEMPLATE.md  V1_0_1_PATCH_RUNBOOK.md  WINGET_PUBLISH.md  bootstrap.ps1  setup-and-test.ps1
.cursor/: PRECURSOR.md
.cursor/rules/: agent-protocol.mdc  diagnostics.mdc  issue-reporting-and-apply-report.mdc  knowledge-base.mdc  verification.mdc  windows-systems-and-toolchain.mdc
.cursor/skills/doctor/: SKILL.md
.github/workflows/: precursor.yml
_analysis_governance/: .gitignore  CONTRIBUTING.md  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  biome.json  dprint.json  fix-heading.js  fix-heading2.js  justfile  package.json  pyproject.toml  tsconfig.json
_analysis_governance/docs/: OWNERSHIP.md  WORKFLOW.md
_analysis_governance/rust/: lib.rs
_analysis_governance/scripts/: py-lockfile-law.ts  run-if-path.ts
_analysis_governance/src/: index.ts
_analysis_precursor/: README.md
_analysis_precursor/.cursor/: PRECURSOR.md
_analysis_precursor/src/: index.ts  merge.ts  scaffold.ts
project-doctor/: DOCUMENTATION.md
project-doctor/.cursor/rules/: web.mdc  (+2 more)
project-doctor/src/: ci.ts  config.ts  detector.test.ts  detector.ts  index.ts  knowledge.ts  scaffold.ts  secrets.ts  verification.ts
templates/governance/: CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  fix-heading.js  fix-heading2.js  pyrightconfig.json
winget-launcher/: precursor.cmd  precursor.ps1
(+11 files in other folders)
