[project]
name = "your_project"
version = "0.0.0"
requires-python = ">=3.11,<3.15"

[dependency-groups]
dev = [
  "ruff==0.14.14",
  "pyright==1.1.408",
  "pytest==9.0.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["generated", "dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
norecursedirs = ["generated", "dist", "build", ".venv", "node_modules"]
